--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|PT+Sans|Handlee&display=swap" rel="stylesheet">
-	<link rel="icon" href="pro.jpg"/>
+	<link rel="shortcut icon" href="favicon.ico"/>
 	<title> Programming </title>
 	<meta charset = "UTF-8">
 	<meta name = "description" content = "For GCI 2019">
